v1.1.0/modules/schema/pages/class/GeneratorTypeAsset.adoc
= `GeneratorTypeAsset`
:toclevels: 4


+++Generic generation equipment that may be used for various purposes such as work planning. It defines both the Real and Reactive power properties (modelled at the PSR level as a GeneratingUnit + SynchronousMachine).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GeneratorTypeAsset`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
*** *`GeneratorTypeAsset`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<maxP,`maxP`>>
//| [[slots_table.maxP]]<<maxP,`maxP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Maximum real power limit.+++
| _n/a_

| <<maxQ,`maxQ`>>
//| [[slots_table.maxQ]]<<maxQ,`maxQ`>>
| 0..1 +
xref::class/ReactivePower.adoc[`ReactivePower`]
| +++Maximum reactive power limit.+++
| _n/a_

| <<minP,`minP`>>
//| [[slots_table.minP]]<<minP,`minP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Minimum real power generated.+++
| _n/a_

| <<minQ,`minQ`>>
//| [[slots_table.minQ]]<<minQ,`minQ`>>
| 0..1 +
xref::class/ReactivePower.adoc[`ReactivePower`]
| +++Minimum reactive power generated.+++
| _n/a_

| <<rDirectSubtrans,`rDirectSubtrans`>>
//| [[slots_table.rDirectSubtrans]]<<rDirectSubtrans,`rDirectSubtrans`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Direct-axis subtransient resistance.+++
| _n/a_

| <<rDirectSync,`rDirectSync`>>
//| [[slots_table.rDirectSync]]<<rDirectSync,`rDirectSync`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Direct-axis synchronous resistance.+++
| _n/a_

| <<rDirectTrans,`rDirectTrans`>>
//| [[slots_table.rDirectTrans]]<<rDirectTrans,`rDirectTrans`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Direct-axis transient resistance.+++
| _n/a_

| <<rQuadSubtrans,`rQuadSubtrans`>>
//| [[slots_table.rQuadSubtrans]]<<rQuadSubtrans,`rQuadSubtrans`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Quadrature-axis subtransient resistance.+++
| _n/a_

| <<rQuadSync,`rQuadSync`>>
//| [[slots_table.rQuadSync]]<<rQuadSync,`rQuadSync`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Quadrature-axis synchronous resistance.+++
| _n/a_

| <<rQuadTrans,`rQuadTrans`>>
//| [[slots_table.rQuadTrans]]<<rQuadTrans,`rQuadTrans`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Quadrature-axis transient resistance.+++
| _n/a_

| <<xDirectSubtrans,`xDirectSubtrans`>>
//| [[slots_table.xDirectSubtrans]]<<xDirectSubtrans,`xDirectSubtrans`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Direct-axis subtransient reactance.+++
| _n/a_

| <<xDirectSync,`xDirectSync`>>
//| [[slots_table.xDirectSync]]<<xDirectSync,`xDirectSync`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Direct-axis synchronous reactance.+++
| _n/a_

| <<xDirectTrans,`xDirectTrans`>>
//| [[slots_table.xDirectTrans]]<<xDirectTrans,`xDirectTrans`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Direct-axis transient reactance.+++
| _n/a_

| <<xQuadSubtrans,`xQuadSubtrans`>>
//| [[slots_table.xQuadSubtrans]]<<xQuadSubtrans,`xQuadSubtrans`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Quadrature-axis subtransient reactance.+++
| _n/a_

| <<xQuadSync,`xQuadSync`>>
//| [[slots_table.xQuadSync]]<<xQuadSync,`xQuadSync`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Quadrature-axis synchronous reactance.+++
| _n/a_

| <<xQuadTrans,`xQuadTrans`>>
//| [[slots_table.xQuadTrans]]<<xQuadTrans,`xQuadTrans`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Quadrature-axis transient reactance.+++
| _n/a_

| <<AssetInfo,`AssetInfo`>>
//| [[slots_table.AssetInfo]]<<AssetInfo,`AssetInfo`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Generic nameplate information associated with this catalog asset type.+++
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<CompatibleUnits,`CompatibleUnits`>>
//| [[slots_table.CompatibleUnits]]<<CompatibleUnits,`CompatibleUnits`>>
| 0..* +
xref::class/CompatibleUnit.adoc[`CompatibleUnit`]
| _n/a_
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<ErpBomItemDatas,`ErpBomItemDatas`>>
//| [[slots_table.ErpBomItemDatas]]<<ErpBomItemDatas,`ErpBomItemDatas`>>
| 0..* +
xref::class/ErpBomItemData.adoc[`ErpBomItemData`]
| _n/a_
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<ErpInventoryIssues,`ErpInventoryIssues`>>
//| [[slots_table.ErpInventoryIssues]]<<ErpInventoryIssues,`ErpInventoryIssues`>>
| 0..* +
xref::class/ErpIssueInventory.adoc[`ErpIssueInventory`]
| _n/a_
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<ErpReqLineItems,`ErpReqLineItems`>>
//| [[slots_table.ErpReqLineItems]]<<ErpReqLineItems,`ErpReqLineItems`>>
| 0..* +
xref::class/ErpReqLineItem.adoc[`ErpReqLineItem`]
| _n/a_
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<ProductAssetModel,`ProductAssetModel`>>
//| [[slots_table.ProductAssetModel]]<<ProductAssetModel,`ProductAssetModel`>>
| 0..* +
xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model conforming to this catalog asset type.+++
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<TypeAssetCatalogue,`TypeAssetCatalogue`>>
//| [[slots_table.TypeAssetCatalogue]]<<TypeAssetCatalogue,`TypeAssetCatalogue`>>
| 0..1 +
xref::class/TypeAssetCatalogue.adoc[`TypeAssetCatalogue`]
| _n/a_
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<estimatedUnitCost,`estimatedUnitCost`>>
//| [[slots_table.estimatedUnitCost]]<<estimatedUnitCost,`estimatedUnitCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Estimated unit cost (or cost per unit length) of this type of asset. It does not include labor to install, construct or configure it.+++
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/AssetKind.adoc[`AssetKind`]
| +++Kind of asset (from enumerated list).+++
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<quantity,`quantity`>>
//| [[slots_table.quantity]]<<quantity,`quantity`>>
| 0..1 +
xref::class/StringQuantity.adoc[`StringQuantity`]
| +++The value, unit of measure, and multiplier for the quantity.+++
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<stockItem,`stockItem`>>
//| [[slots_table.stockItem]]<<stockItem,`stockItem`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if item is a stock item (default).+++
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Description of type of asset.+++
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AssetInfo]
=== `AssetInfo`
+++Generic nameplate information associated with this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.AssetInfo`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.AssetInfo,&#10548;>>
--
////


//[discrete]
[#CompatibleUnits]
=== `CompatibleUnits`



[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.CompatibleUnits`
| Cardinality
| 0..*
| Type
| xref::class/CompatibleUnit.adoc[`CompatibleUnit`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.CompatibleUnits,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#ErpBomItemDatas]
=== `ErpBomItemDatas`



[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.ErpBomItemDatas`
| Cardinality
| 0..*
| Type
| xref::class/ErpBomItemData.adoc[`ErpBomItemData`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.ErpBomItemDatas,&#10548;>>
--
////


//[discrete]
[#ErpInventoryIssues]
=== `ErpInventoryIssues`



[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.ErpInventoryIssues`
| Cardinality
| 0..*
| Type
| xref::class/ErpIssueInventory.adoc[`ErpIssueInventory`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.ErpInventoryIssues,&#10548;>>
--
////


//[discrete]
[#ErpReqLineItems]
=== `ErpReqLineItems`



[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.ErpReqLineItems`
| Cardinality
| 0..*
| Type
| xref::class/ErpReqLineItem.adoc[`ErpReqLineItem`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.ErpReqLineItems,&#10548;>>
--
////


//[discrete]
[#estimatedUnitCost]
=== `estimatedUnitCost`
+++Estimated unit cost (or cost per unit length) of this type of asset. It does not include labor to install, construct or configure it.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.estimatedUnitCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.estimatedUnitCost,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++Kind of asset (from enumerated list).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetKind.adoc[`AssetKind`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#maxP]
=== `maxP`
+++Maximum real power limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.maxP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.maxP,&#10548;>>
--
////


//[discrete]
[#maxQ]
=== `maxQ`
+++Maximum reactive power limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.maxQ`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

////
[.text-left]
--
<<slots_table.maxQ,&#10548;>>
--
////


//[discrete]
[#minP]
=== `minP`
+++Minimum real power generated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.minP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.minP,&#10548;>>
--
////


//[discrete]
[#minQ]
=== `minQ`
+++Minimum reactive power generated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.minQ`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

////
[.text-left]
--
<<slots_table.minQ,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model conforming to this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.ProductAssetModel`
| Cardinality
| 0..*
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.ProductAssetModel,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#quantity]
=== `quantity`
+++The value, unit of measure, and multiplier for the quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.quantity`
| Cardinality
| 0..1
| Type
| xref::class/StringQuantity.adoc[`StringQuantity`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.quantity,&#10548;>>
--
////


//[discrete]
[#rDirectSubtrans]
=== `rDirectSubtrans`
+++Direct-axis subtransient resistance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.rDirectSubtrans`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.rDirectSubtrans,&#10548;>>
--
////


//[discrete]
[#rDirectSync]
=== `rDirectSync`
+++Direct-axis synchronous resistance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.rDirectSync`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.rDirectSync,&#10548;>>
--
////


//[discrete]
[#rDirectTrans]
=== `rDirectTrans`
+++Direct-axis transient resistance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.rDirectTrans`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.rDirectTrans,&#10548;>>
--
////


//[discrete]
[#rQuadSubtrans]
=== `rQuadSubtrans`
+++Quadrature-axis subtransient resistance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.rQuadSubtrans`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.rQuadSubtrans,&#10548;>>
--
////


//[discrete]
[#rQuadSync]
=== `rQuadSync`
+++Quadrature-axis synchronous resistance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.rQuadSync`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.rQuadSync,&#10548;>>
--
////


//[discrete]
[#rQuadTrans]
=== `rQuadTrans`
+++Quadrature-axis transient resistance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.rQuadTrans`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.rQuadTrans,&#10548;>>
--
////


//[discrete]
[#stockItem]
=== `stockItem`
+++True if item is a stock item (default).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.stockItem`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.stockItem,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Description of type of asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////


//[discrete]
[#TypeAssetCatalogue]
=== `TypeAssetCatalogue`



[cols="h,4",width=65%]
|===
| URI
| `cim:CatalogAssetType.TypeAssetCatalogue`
| Cardinality
| 0..1
| Type
| xref::class/TypeAssetCatalogue.adoc[`TypeAssetCatalogue`]

| Inherited from
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]


|===

////
[.text-left]
--
<<slots_table.TypeAssetCatalogue,&#10548;>>
--
////


//[discrete]
[#xDirectSubtrans]
=== `xDirectSubtrans`
+++Direct-axis subtransient reactance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.xDirectSubtrans`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.xDirectSubtrans,&#10548;>>
--
////


//[discrete]
[#xDirectSync]
=== `xDirectSync`
+++Direct-axis synchronous reactance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.xDirectSync`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.xDirectSync,&#10548;>>
--
////


//[discrete]
[#xDirectTrans]
=== `xDirectTrans`
+++Direct-axis transient reactance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.xDirectTrans`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.xDirectTrans,&#10548;>>
--
////


//[discrete]
[#xQuadSubtrans]
=== `xQuadSubtrans`
+++Quadrature-axis subtransient reactance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.xQuadSubtrans`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.xQuadSubtrans,&#10548;>>
--
////


//[discrete]
[#xQuadSync]
=== `xQuadSync`
+++Quadrature-axis synchronous reactance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.xQuadSync`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.xQuadSync,&#10548;>>
--
////


//[discrete]
[#xQuadTrans]
=== `xQuadTrans`
+++Quadrature-axis transient reactance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratorTypeAsset.xQuadTrans`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.xQuadTrans,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
